--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,17 @@ body{
 	position:relative;
 	font-family: 'Raleway', sans-serif;
 }
+
+#load{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background:#fff
+	url('https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif')
+	no-repeat center center;
+	z-index: 9999;
+}
+
 body a{
     transition:0.5s all;
 	-webkit-transition:0.5s all;
