--- a/templates/User/bookride.html
+++ b/templates/User/bookride.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookride</title>
-
+{% block head %}
 </head>
 
 	<!-- Meta tag Keywords -->
@@ -41,9 +41,9 @@
 	<!-- //web-fonts -->
 	
 </head>
-
-<body>
-
+{% endblock %}
+<body onload="load_preloader()">
+	<div id="load"></div>
 <!--/banner-->
 	<div class="top-bar_sub_w3layouts container-fluid">
 		<div class="row">
@@ -150,7 +150,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-3" style=" height: 850px;">
+			<div class="col-lg-3" style=" height: 830px;">
 				<div class="card text-white bg-dark mb-3 border-warning" style="width: 100%; height: 100%;">
 					<!-- <img class="card-img-top" src="https://blog.grabon.in/wp-content/uploads/2017/01/olacabs.jpg" alt="Card image cap"> -->
 					<div class="card-body">
@@ -158,7 +158,7 @@
 							<div class="card">
 							  <div class="card-header" id="headingOne">
 								<h5 class="mb-0">
-								  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								  <button class="btn btn-link" style="text-decoration: none;" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
 									<i class="fa fa-home" aria-hidden="true"></i>&nbsp &nbsp
 									Choose from a Saved Trip
 								  </button>
@@ -175,7 +175,7 @@
 							<div class="card">
 								<div class="card-header" id="headingTwo">
 								  <h5 class="mb-0">
-									<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+									<button class="btn btn-link collapsed" style="text-decoration: none;" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
 									<i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp &nbsp
 									  Enter new location
 									</button>
@@ -187,11 +187,11 @@
 									<form id="send_location_info" class="mt-4" action="" method="POST">
 										<div class="form-group">
 										<!-- Assigning value to the input field using the object sent from the view definition -->
-										<input type="text" class="form-control" value="{% if name %} {{name[0]}} {% endif %}" id="origin" placeholder="Origin">
+										<input required type="text" class="form-control" value="{% if name %} {{name[0]}} {% endif %}" id="origin" placeholder="Origin">
 										</div>
 										<div class="form-group">
 										<!-- Assigning value to the input field using the object sent from the view definition -->
-										<input type="text" class="form-control" value="{% if name %} {{name[1]}} {% endif %}" id="destination" placeholder="Destination">
+										<input required type="text" class="form-control" value="{% if name %} {{name[1]}} {% endif %}" id="destination" placeholder="Destination">
 										</div>
 										<!-- The type of input field is set to "hidden" because they are used only for sending data to backend using JavaScript-->
 										<input type="hidden" id="origin_coordinates" value="" name="origin_coordinates">
@@ -200,27 +200,29 @@
 										<input type="hidden" id="destination_place_id" value="" name="destination_place_id">
 										<input type="hidden" id="origin_name" value="" name="origin_name">
 										<input type="hidden" id="destination_name" value="" name="destination_name">
+										<!-- <input type="text" name="test" id="test" value=""> -->
+										<div class="form-group">
+											<button  onclick="getDirections()" type="text" class=" form-control btn btn-warning text-white btn-sm"><b>Confirm</b></button>
+										</div>	<!--  -->
+										
 									</form>
-									<br><br>
-									<h6 class="display-5">Enter Complete Address</h6>
-									
 									<form id="send_address" class="mt-4" action="" method="POST">
+										<h6 class="display-5">Enter Your Complete Address</h6><br>
 										<div class="form-group">
-											<input type="text" class="form-control" id="floor" placeholder="HOUSE / FLAT / BLOCK NO.">
+											<input required type="text" class="form-control" id="floor" placeholder="HOUSE / FLAT / BLOCK NO.">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" id="floor" placeholder="APARTMENT / COMPLEX NAME">
+											<input required type="text" class="form-control" id="floor" placeholder="APARTMENT / COMPLEX NAME">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" id="floor" placeholder="LANDMARK">
+											<input required type="text" class="form-control" id="floor" placeholder="LANDMARK">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" id="floor" placeholder="ZIPCODE">
+											<input required type="text" class="form-control" id="floor" placeholder="ZIPCODE">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" id="floor" placeholder="DIRECTIONS TO REACH">
+											<button type="submit" class=" form-control btn btn-primary text-white"><b>Click to View Rides</b></button>
 										</div>
-										<button type="submit" class="btn btn-primary">Submit</button>
 									</form>
 								  </div>
 								</div>
@@ -233,7 +235,19 @@
 				  </div>
 			</div>
 			{% block content %}
+			<div class="col-lg-9">
+				<h2 class="border border-warning rounded mt-1 bg-dark text-white text-center" style="padding: 20px;">Ride Details 
+				  <span style="float:left" class="fas fa-taxi"></span>
+			   </h2>
+				  <br>
+			   <div class="row">
+				  <div class="col-lg-12">
+					 <div id ="map" style="height: 680px;">
 
+					 </div>
+				  </div>
+			   </div>
+			 </div>
 			{% endblock %}
 		</div>
 	</div>
@@ -308,77 +322,9 @@
     </body>
 	<!-- Google Maps Javascript API to get suggestions and collect location from user. -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdQ3Jx0mPk6J9vNVdKN-tSDCM5eYk9abs&libraries=places"></script>
-    <script>
-    function initialize() {
-
-	  // Get element from which input should be taken
-      var input = document.getElementById('origin');
-	  var input_2 = document.getElementById('destination');
-
-	  // Initialize an object for the Google Maps Autocomplete API service (Since we have both origin and destination,
-	  // we will create two objects, one for each)
-      autocomplete = new google.maps.places.Autocomplete(input, 
-      {
-		  // This are the place parameters that google will use to return results.
-		  // This can help to reduce API usage costs by reducing the number of results.
-        types: ['establishment'],
-        componentRestrictions: {'country':['IN']},
-        fields: ['place_id','geometry','name']
-      }); 
-	  autocomplete_2 = new google.maps.places.Autocomplete(input_2, 
-      {
-        types: ['establishment'],
-        componentRestrictions: {'country':['IN']},
-        fields: ['place_id','geometry','name']
-      });
-
-	  // This will call "onPlaceChanged" function when an option from the dropdown suggestions is selected.
-	  // 'place_changed' is a value in google maps JavaScript API
-      autocomplete_2.addListener('place_changed', onPlaceChanged);
-    }
-
-	// This line is responsible for displaying dropdown suggestions to the input field.
-    google.maps.event.addDomListener(window, 'load', initialize);
-
-    function onPlaceChanged() {
-		// Using the object created in previous method, we will call "getPlace()" function (provided by google), to get 
-		// place details like geometry and place_id (Geometry means latitude and longitude).
-      var origin_place = autocomplete.getPlace();
-
-	  //We are using JSON 'stringify' function to convert the returned object into string for passing as text using the html form.
-      origin_place_string = JSON.stringify(origin_place.geometry)
-	  origin_place_id = JSON.stringify(origin_place.place_id)
-	//   origin_place_name = JSON.stringify(origin_place.name)
-
-	  var destination_place = autocomplete_2.getPlace();
-	  destination_place_string = JSON.stringify(destination_place.geometry)
-	  destination_place_id = JSON.stringify(destination_place.place_id)
-	//   destination_place_name = JSON.stringify(destination_place.name)
-
-	  // We will check if the user has selected an input from the dropdown or has typed something himself without selecting anything from the dropdown.
-	  // This can be checked if the location has a geometry.
-      if (!origin_place.geometry || !destination_place.geometry) {
-        document.getElementById('origin').placeholder = 'Enter a Place';
-		document.getElementById('destination').placeholder = 'Enter a Place';
-      } else {
-
-        // Setting Origin values to the hidden fields in the form.
-        document.getElementById('origin_coordinates').value = origin_place_string;
-		document.getElementById('origin_place_id').value = origin_place_id
-		document.getElementById("origin_name").value = origin_place.name
-
-		// Setting Destination Values to the hidden fields in the form.
-		document.getElementById('destination_coordinates').value = destination_place_string;
-		document.getElementById('destination_place_id').value = destination_place_id
-		document.getElementById('destination_name').value = destination_place.name
-
-		// Submitting form that has id="send_geometry" using the JavaScript "submit()" method.
-		document.getElementById('send_location_info').submit();
-      }
-    }
-	
-  </script>
-
+    <!-- {% block jsForMaps %} -->
+  	<script src="{{ url_for('static', filename='js/map.js') }}"></script>
+	<!-- {% endblock %} -->
 <!-- js-scripts -->		
 
 	<!-- js -->
@@ -468,6 +414,14 @@
 	</script>
 	<!-- //here ends scrolling icon -->
 	<!-- start-smoth-scrolling -->
+	<script>
+		var preloader = document.getElementById('load')
+
+		function load_preloader(){
+			preloader.style.display = 'none';
+		}
+	</script>
+	
 	
 <!-- //js-scripts -->
     </html>
