--- a/templates/User/editprofile.html
+++ b/templates/User/editprofile.html
@@ -1,6 +1,10 @@
 {% extends 'user/master.html' %}
+
+    {% block header %}
+    <div style="height: 90px; background-color: #252525;"></div>
+    {% endblock %}
+
     {% block content %}
-    
     <section class="bookingform py-5">
         <div class="container py-md-5 py-3">
             <div class="row justify-content-center" role="document">
