--- a/templates/User/register.html
+++ b/templates/User/register.html
@@ -1,4 +1,9 @@
 {% extends 'user/master.html' %}
+
+    {% block header %}
+    <div style="height: 90px; background-color: #252525;"></div>
+    {% endblock %}
+    
     {% block content %}
     
     <section class="bookingform py-5">
