--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,12 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+html {
+    margin:0;
+    padding:0;
+	scroll-behavior: smooth;
+	
+}
 body{
 	padding:0;
 	margin:0;
@@ -22,23 +28,6 @@ body{
 	z-index: 9999;
 }
 
-body a{
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-a:hover{
-	text-decoration:none;
-}
-input[type="button"],input[type="submit"],.contact-form input[type="submit"]{
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
 h1,h2,h3,h4,h5,h6{
 	margin:0;	
 }	
@@ -56,142 +45,6 @@ img{
 	width:100%;
 }
 
-
-/*--/header --*/
-/*-- top-bar-w3-agile --*/
-
-.header {
-	position: relative;
-}
-
-.header-nav {
-	position: relative;
-}
-
-.top-bar {
-	position: absolute;
-	z-index: 999;
-	width: 95%;
-	top: 4%;
-	left: 3%;
-}
-
-/*--top-bar_sub_w3layouts --*/
-
-.top-bar_sub_w3layouts {
-	background: #fff;
-    padding: 0.3em 2em;
-	position: relative;
-}
-
-.top-bar_sub_w3layouts h6 {
-	text-align: center;
-	color: #fff;
-	font-size: 0.8em;
-	font-weight: 600;
-	letter-spacing: 2px;
-	float: left;
-}
-
-.log {
-	float: right;
-	margin-top: 5px;
-}
-
-.top-bar_sub_w3layouts h6 a {
-	color: #fff;
-	text-decoration: none;
-	padding: 8px 16px;
-	letter-spacing: 1px;
-	font-size: 13px;
-	background: #01cd74;
-	display: inline-block;
-	border: 2px solid transparent;
-	font-weight: bold;
-}
-
-.log h5 {
-	display: inline-block;
-	color: #a0a1a5;
-	font-size: 0.9em;
-	font-weight: 500;
-	letter-spacing: 1px;
-}
-
-.log .fa-user.fa-w-16 {
-	color: #fff;
-	margin: 0 4px;
-}
-
-a.sign {
-	color: #a0a1a5;
-	font-size: 1em;
-	letter-spacing: 1px;
-}
-.top-forms span{
-    font-size: 0.9em;
-    color: #707173;
-}
-.top-forms span a {
-    color: #555;
-    border: 1px hidden;
-    padding: 10px 20px;
-	border-radius: 3px;
-    font-weight: 500;
-}
-.top-forms span a:hover {
-    background: #ffc107;
-    border: 1px dotted #fff;
-    color: #fff;
-}
-.top-forms span a:hover i {
-    color: #fff;
-}
-.top-forms a i{
-	color: #ffc107;
-}
-.social_list1 li {
-	display: inline-block;
-}
-
-ul.social_list1 li a {
-    color: #fff;
-    font-size: 0.9em;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    display: block;
-    line-height: 29px;
-	text-align: center;
-	transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-}
-ul.social_list1 li a:hover{
-	opacity: 0.8;
-	transform: rotateX(360deg);
-    -webkit-transform: rotateX(360deg);
-    -moz-transform: rotateX(360deg);
-    -o-transform: rotateX(360deg);
-    -ms-transform: rotateX(360deg);
-    transition: transform 2s;
-}
-.facebook1 {
-	background: #3b5998;
-}
-
-.twitter2 {
-	background: #1da1f2;
-}
-
-.dribble3 {
-	background: #ea4c89;
-}
-.pin {
-	background: #BD081C;
-}
 a.navbar-brand {
 	font-size: 2em;
 	font-weight: 800;
@@ -238,7 +91,7 @@ h3.logo a.navbar-brand i {
 	position: absolute;
 	width: 100%;
 	z-index: 9;
-	padding: 2em 2em;
+	padding: 1em 1em;
 }
 
 .navbar-light .navbar-nav .nav-link,
@@ -385,6 +238,7 @@ h3.logo a.navbar-brand i {
 	color: #fff;
 	border: none;
     padding: 1.5rem;
+	border-radius: 10px 10px 0 0;
 }
 
 .modal-body {
@@ -394,6 +248,7 @@ h3.logo a.navbar-brand i {
 	flex: 1 1 auto;
 	padding: 2rem;
 	background: #252525;
+	border-radius: 0 0 10px 10px;
 }
 .modal-body p {
     margin: 0;
@@ -414,248 +269,6 @@ label{
 
 /*-- /banner --*/
 
-.banner-form {
-	width: 90%;
-	margin: 0 auto;
-}
-
-.rslides {
-	position: relative;
-	list-style: none;
-	overflow: hidden;
-	width: 100%;
-	padding: 0;
-}
-
-.rslides li {
-	-webkit-backface-visibility: hidden;
-	position: absolute;
-	display: none;
-	width: 100%;
-	left: 0;
-	top: 0;
-}
-
-.rslides li:first-child {
-	position: relative;
-	display: block;
-	float: left;
-}
-
-.rslides img {
-	display: block;
-	height: auto;
-	width: 100%;
-	border: 0;
-}
-
-.rslides {
-	margin: 0 auto;
-}
-
-.rslides_container {
-	position: relative;
-	width: 100%;
-}
-
-.centered-btns_nav {
-	z-index: 3;
-	position: absolute;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	top: 50%;
-	left: 0;
-	opacity: 0.7;
-	text-indent: -9999px;
-	overflow: hidden;
-	text-decoration: none;
-	height: 61px;
-	width: 38px;
-	background: transparent url(../images/arrows.png) no-repeat left 50%;
-	margin-top: -45px;
-}
-
-.centered-btns_nav:active {
-	opacity: 1.0;
-}
-
-.centered-btns_nav.next {
-	left: auto;
-	background-position: right top;
-	right: 0;
-}
-
-.transparent-btns_nav {
-	z-index: 3;
-	position: absolute;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	top: 0;
-	left: 0;
-	display: block;
-	background: #fff;
-	/* Fix for IE6-9 */
-	opacity: 0;
-	filter: alpha(opacity=1);
-	width: 48%;
-	text-indent: -9999px;
-	overflow: hidden;
-	height: 91%;
-}
-
-.transparent-btns_nav.next {
-	left: auto;
-	right: 0;
-}
-
-.large-btns_nav {
-	z-index: 3;
-	position: absolute;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	opacity: 0.6;
-	text-indent: -9999px;
-	overflow: hidden;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	background: url(../images/arrows.png) no-repeat left 50%;
-	width: 38px;
-}
-
-.large-btns_nav:active {
-	opacity: 1.0;
-}
-
-.large-btns_nav.next {
-	left: auto;
-	background-position: right 50%;
-	right: 0;
-}
-
-.centered-btns_nav:focus,
-.transparent-btns_nav:focus,
-.large-btns_nav:focus {
-	outline: none;
-}
-
-.centered-btns_tabs,
-.transparent-btns_tabs,
-.large-btns_tabs {
-	text-align: center;
-	position: absolute;
-	left: 47%;
-	bottom: 3%;
-	z-index: 9;
-}
-
-.centered-btns_tabs li,
-.transparent-btns_tabs li,
-.large-btns_tabs li {
-	display: inline;
-	float: none;
-	_float: left;
-	*float: left;
-	margin-right: 10px;
-}
-
-.centered-btns_tabs a,
-.transparent-btns_tabs a,
-.large-btns_tabs a {
-	text-indent: -9999px;
-	overflow: hidden;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	background: #fff;
-	display: inline-block;
-	_display: block;
-	width: 12px;
-	height: 12px;
-}
-
-.centered-btns_here a,
-.transparent-btns_here a,
-.large-btns_here a {
-	background: #ffc107;
-}
-
-.banner-img,
-.banner-img.one,
-.banner-img.two,
-.banner-img.three {
-	background: url(../images/banner1.jpg) no-repeat 0px 0px;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-o-background-size: cover;
-	-moz-background-size: cover;
-	-ms-background-size: cover;
-	min-height: 710px;
-}
-
-.banner-img.one {
-	background: url(../images/banner2.jpg) no-repeat 0px 0px;
-}
-
-.banner-img.two {
-	background: url(../images/banner5.jpg) no-repeat 0px 0px;
-}
-
-.banner-img.three {
-	background: url(../images/banner3.jpg) no-repeat 0px 0px;
-}
-
-.banner-info {
-	width: 80%;
-	margin: 0 auto;
-	padding-top: 12em;
-}
-
-.banner-info h1 ,.banner-info h2 ,.banner-info h4 {
-	letter-spacing: 2px;
-	line-height: 1.4em;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-	font-size: 4em;
-	color: #fff;
-     position: relative;
-}
-.banner-info h5 {
-	letter-spacing: 3px;
-	line-height: 1.4em;
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
-	font-size: 4em;
-	color: #fff;
-	position: relative;
-}
-.banner-info h5:after ,.banner-info h2:after{
-    position: absolute;
-    content: "";
-    width: 10%;
-    height: 4px;
-    background: #fff;
-    left: 45%;
-    bottom: -25%;
-}
-.banner-info a {
-    font-size: 15px;
-	font-weight: 600;
-    letter-spacing: 2px;
-	text-transform: uppercase;
-    color: #fff;
-    padding: 15px 40px;
-    border: 2px solid #fff;
-    border-radius: 3px;
-     margin-top: 1em;
-    display: inline-block;
-}
-.banner-info a:hover {
-	background: #ffc107;
-    border: 2px solid #ffc107;
-    color: #fff;
-}
-.banner-info span {
-     font-size: 60px;
-    color: #fff;
-    margin-bottom: 10px;
-}
-
 .bs-slider-overlay {
     position: absolute;
     top: 0;
@@ -671,30 +284,6 @@ label{
 }
 .bnr-button {
 	margin-top: 2em;
-}
-
-.carousel-control {
-	line-height: 42em;
-}
-
-.carousel-indicators li {
-	display: inline-block;
-	max-width: 20px;
-	height: 19px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	-ms-border-radius: 50%;
-	margin: 0 8px;
-}
-
-.carousel-indicators .active {
-	background: #1cbbb4;
-}
-
-.rslides-container .carousel-item  {
-	height: 50em;
 }
 
 /*--//banner --*/
@@ -739,7 +328,7 @@ footer {
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
-     position: relative;
+    position: relative;
 }
 
 .footer-grid-agileits-w3ls1 h3:after, .footer-grid-agileits-w3ls h3:after {
@@ -748,7 +337,7 @@ footer {
     background: #fff;
     height: 2px;
     width: 15%;
-    left: 0%;
+	left: 40%;
     bottom: -50%;
 }
 .footer-grid-agileits-w3ls1 p {
@@ -782,6 +371,7 @@ footer {
 .footer-grid-agileits-w3ls1 a.read:hover{
     background: #ddd;
     color: #333;
+	transition: 0.5s;
 }
 
 .subscribe-main input[type="email"] {
@@ -1134,7 +724,7 @@ i.fa.fa-smile {
     border: none;
     border: 1px solid #777;
     width: 100%;
-    float: left;
+    /* float: left; */
     outline: none;
     padding: 13px 15px 13px 15px;
     font-size: 15px;
@@ -1295,38 +885,6 @@ i.fa.fa-smile {
 	letter-spacing: 1px;
 }
 
-.carousel-control-next-icon {
-    background-image: none;
-    color: #333;
-}
-.carousel-control-prev:hover, .carousel-control-prev:focus, .carousel-control-next:hover, .carousel-control-next:focus {
-    color: #999;
-}
-.carousel-control-prev {
-    left: -6%;
-    top: 35%;
-    height: 40px;
-    width: 40px;
-    background: none;
-    color: #000;
-    box-shadow: none;
-    background-image: none !important;
-    opacity: 0.9;
-    line-height: 34px;
-}
-.carousel-control-next {
-    right: -6%;
-    top: 35%;
-    height: 40px;
-    width: 40px;
-    background: none;
-    color: #000;
-    box-shadow: none;
-    background-image: none !important;
-    opacity: 0.9;
-    line-height: 34px;
-}
-/*-- //Car Slider --*/
 
 /*-- counter--*/
 .services-bottom {
@@ -1534,11 +1092,12 @@ i.fa.fa-smile {
     color: #aaa;
 }
 .price-grid h3 {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 600;
     color: #ccc;
     letter-spacing: 1px;
 	position: relative;
+	font-family: Tahoma, sans-serif;
 }
 .price-grid  li {
     list-style-type: none;
@@ -2180,35 +1739,71 @@ ul.radio-w3ls li {
 		font-size: 14px;
 	}
 }
-@media(max-width: 320px){
-	.banner-info {
-		width: 80%;
-	}
-	.banner-info h1, .banner-info h2, .banner-info h4, .banner-info h5 {
-		font-size: 1.5em;
-		letter-spacing: 0px;
-	}
-	.w3layouts-agile-copyrightbottom p {
-		font-size: 14px;
-	}
-	li.nav-item.active, li.nav-item {
-		width: 100%;
-	}
-	.food-Slider {
-		padding: 0 1em;
-	}
-	h1.heading, h2.heading, h3.heading {
-		font-size: 33px;
-	}
-	.service-grids h3 {
-		font-size: 18px;
-		letter-spacing: 0px;
-	}
-}
-/*-- //Responsive Design --*/
-/* .expand-left{
-	unicode-bidi: embed;
-	direction: rtl;
-	width: 300px;
+
+.img-overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	text-align: center;
-} */
+	color: #FFFFFF
+  }
+
+.layer {
+    background-color: rgba(19, 19, 17, 0.048);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-image-length {
+	height: 680px;
+}
+
+.carousel-caption-modified {
+	position: absolute;
+	right: 15%;
+	bottom: 30%;
+	left: 15%;
+	z-index: 10;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #fff;
+	text-align: center;
+  }
+
+  .carousel-caption-modified h1 {
+	letter-spacing: 2px;
+	line-height: 1.4em;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
+	font-size: 4em;
+	color: #fff;
+    position: relative;
+}
+
+  .carousel-caption-modified a{
+	font-size: 12px;
+	font-weight: 600;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: #fff;
+	padding: 15px 40px;
+	border: 2px solid #fff;
+	border-radius: 3px;
+	margin-top: 1em;
+	display: inline-block;
+	-webkit-transition: background 0.3s; /* For Safari 3.0 to 6.0 */
+	transition: background 0.3s; /* For modern browsers */
+  }
+  .carousel-caption-modified a:hover{
+	background: #ffc107;
+    border: 2px solid #ffc107;
+    color: #fff;
+  }
+
+.footer-list li{
+	display: inline;
+}
