--- a/templates/User/editpass.html
+++ b/templates/User/editpass.html
@@ -1,6 +1,9 @@
 {% extends 'user/master.html' %}
+
+    {% block header %}
+    <div style="height: 90px; background-color: #252525;"></div>
+    {% endblock %}
     {% block content %}
-    
     <section class="bookingform py-5">
         <div class="container py-md-5 py-3">
             {% with messages = get_flashed_messages() %}
