--- a/templates/User/login.html
+++ b/templates/User/login.html
@@ -1,7 +1,11 @@
 {% extends 'user/master.html' %}
-    {% block content %}
 
-    <section class="bookingform py-5">
+    {% block header %}
+    <div style="height: 90px; background-color: #252525;"></div>
+    {% endblock %}
+
+    {% block content %}
+    <section class="bookingform py-5"> <!-- style="min-height:100%; background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)); background-size:cover;" -->
         <div class="container py-md-5 py-3">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -24,7 +28,7 @@
             <h5 class="heading mb-5 text-center">Cammy Cab</h5>
             
             <div class="row  justify-content-center" role="document">
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                     <div class="modal-header text-center">
                         <h5 class="w-100">Please Enter Your Credentials</h5>
                     </div>
@@ -33,21 +37,16 @@
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">Email-Id</label>
                                 <input type="text" class="form-control" placeholder="Email-Id" name="email" id="recipient-name" required="">
-                            </div>
+                            </div><br>
                             <div class="form-group">
                                 <label for="password" class="col-form-label">Password</label>
                                 <input type="password" class="form-control" placeholder="Password" name="password" id="password" required="">
                             </div>
                             <div class="row sub-w3l my-3">
-                                <!-- <div class="col sub-agile">
-                                    <input type="checkbox" name="remember" id="brand1" value="True">
-                                    <label for="brand1" class="text-white">
-                                        <span></span>Remember me</label>
-                                </div> -->
                                 <div class="col sub-agile">
                                     <a href="#" style="color: white;">Forgot Password?</a>
                                 </div>
-                            </div> 
+                            </div> <br>
                             <div class="right-w3l">
                                 <input type="submit" class="form-control" value="Sign In">
                             </div>
